src/main/java/edu/sjsu/facetedJS/interpreter/parser/FacetedJavaScriptParser.java
// Generated from src/main/java/edu/sjsu/facetedJS/interpreter/parser/FacetedJavaScript.g4 by ANTLR 4.5.1

    package edu.sjsu.facetedJS.interpreter.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FacetedJavaScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		IF=10, ELSE=11, DO=12, WHILE=13, FOR=14, LABEL=15, WRTCHL=16, SECURE=17, 
		CREATECHL=18, ALERT=19, WINOPEN=20, FUNCTION=21, VAR=22, PRINT=23, RETURN=24, 
		NEW=25, DEFACET=26, PUSH=27, LENGTH=28, MD5=29, INT=30, BOOL=31, STRING=32, 
		NULL=33, UNDEFINED=34, INC=35, DEC=36, MUL=37, DIV=38, ADD=39, SUB=40, 
		MOD=41, GT=42, GE=43, LT=44, LE=45, EQ=46, NEQ=47, S_EQ=48, S_NEQ=49, 
		ASSIGN_REG=50, ASSIGN_ADD=51, ASSIGN_SUB=52, ASSIGN_MUL=53, ASSIGN_DIV=54, 
		SEPARATOR=55, AND=56, OR=57, ID=58, NEWLINE=59, BLOCK_COMMENT=60, LINE_COMMENT=61, 
		WS=62;
	public static final int
		RULE_prog = 0, RULE_stat = 1, RULE_expr = 2, RULE_perms = 3, RULE_block = 4, 
		RULE_params = 5, RULE_args = 6, RULE_array = 7, RULE_object = 8, RULE_pair = 9;
	public static final String[] ruleNames = {
		"prog", "stat", "expr", "perms", "block", "params", "args", "array", "object", 
		"pair"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'{'", "'}'", "'('", "')'", "','", "'['", "']'", "'.'", "':'", "'iff'", 
		"'else'", "'do'", "'while'", "'for'", "'Label'", "'writeToChannel'", "'setSecurity'", 
		"'createChannel'", "'alert'", "'window.open'", "'function'", "'var'", 
		"'system.log'", "'return'", "'new'", "'defacet'", "'push'", "'length'", 
		"'md5'", null, null, null, "'null'", "'undefined'", "'++'", "'--'", "'*'", 
		"'/'", "'+'", "'-'", "'%'", "'>'", "'>='", "'<'", "'<='", "'=='", "'!='", 
		"'==='", "'!=='", "'='", "'+='", "'-='", "'*='", "'/='", "';'", "'&&'", 
		"'||'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, "IF", "ELSE", 
		"DO", "WHILE", "FOR", "LABEL", "WRTCHL", "SECURE", "CREATECHL", "ALERT", 
		"WINOPEN", "FUNCTION", "VAR", "PRINT", "RETURN", "NEW", "DEFACET", "PUSH", 
		"LENGTH", "MD5", "INT", "BOOL", "STRING", "NULL", "UNDEFINED", "INC", 
		"DEC", "MUL", "DIV", "ADD", "SUB", "MOD", "GT", "GE", "LT", "LE", "EQ", 
		"NEQ", "S_EQ", "S_NEQ", "ASSIGN_REG", "ASSIGN_ADD", "ASSIGN_SUB", "ASSIGN_MUL", 
		"ASSIGN_DIV", "SEPARATOR", "AND", "OR", "ID", "NEWLINE", "BLOCK_COMMENT", 
		"LINE_COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FacetedJavaScript.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FacetedJavaScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FacetedJavaScriptVisitor ) return ((FacetedJavaScriptVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(21); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(20);
				stat();
				}
				}
				setState(23); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__5) | (1L << IF) | (1L << DO) | (1L << WHILE) | (1L << FOR) | (1L << WRTCHL) | (1L << SECURE) | (1L << ALERT) | (1L << WINOPEN) | (1L << FUNCTION) | (1L << VAR) | (1L << PRINT) | (1L << RETURN) | (1L << NEW) | (1L << DEFACET) | (1L << MD5) | (1L << INT) | (1L << BOOL) | (1L << STRING) | (1L << NULL) | (1L << UNDEFINED) | (1L << INC) | (1L << DEC) | (1L << ADD) | (1L << SUB) | (1L << SEPARATOR) | (1L << ID))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
	 
		public StatContext() { }
		public void copyFrom(StatContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class WinOpenContext extends StatContext {
		public TerminalNode WINOPEN() { return getToken(FacetedJavaScriptParser.WINOPEN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEPARATOR() { return getToken(FacetedJavaScriptParser.SEPARATOR, 0); }
		public WinOpenContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).enterWinOpen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).exitWinOpen(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FacetedJavaScriptVisitor ) return ((FacetedJavaScriptVisitor<? extends T>)visitor).visitWinOpen(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BlankContext extends StatContext {
		public TerminalNode SEPARATOR() { return getToken(FacetedJavaScriptParser.SEPARATOR, 0); }
		public BlankContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).enterBlank(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).exitBlank(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FacetedJavaScriptVisitor ) return ((FacetedJavaScriptVisitor<? extends T>)visitor).visitBlank(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfThenElseContext extends StatContext {
		public TerminalNode IF() { return getToken(FacetedJavaScriptParser.IF, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(FacetedJavaScriptParser.ELSE, 0); }
		public IfThenElseContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).enterIfThenElse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).exitIfThenElse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FacetedJavaScriptVisitor ) return ((FacetedJavaScriptVisitor<? extends T>)visitor).visitIfThenElse(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ForContext extends StatContext {
		public TerminalNode FOR() { return getToken(FacetedJavaScriptParser.FOR, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ForContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).enterFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).exitFor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FacetedJavaScriptVisitor ) return ((FacetedJavaScriptVisitor<? extends T>)visitor).visitFor(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ReturnExprContext extends StatContext {
		public TerminalNode RETURN() { return getToken(FacetedJavaScriptParser.RETURN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEPARATOR() { return getToken(FacetedJavaScriptParser.SEPARATOR, 0); }
		public ReturnExprContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).enterReturnExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).exitReturnExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FacetedJavaScriptVisitor ) return ((FacetedJavaScriptVisitor<? extends T>)visitor).visitReturnExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NamedFunctionContext extends StatContext {
		public TerminalNode FUNCTION() { return getToken(FacetedJavaScriptParser.FUNCTION, 0); }
		public TerminalNode ID() { return getToken(FacetedJavaScriptParser.ID, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public NamedFunctionContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).enterNamedFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).exitNamedFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FacetedJavaScriptVisitor ) return ((FacetedJavaScriptVisitor<? extends T>)visitor).visitNamedFunction(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfThenContext extends StatContext {
		public TerminalNode IF() { return getToken(FacetedJavaScriptParser.IF, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public IfThenContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).enterIfThen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).exitIfThen(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FacetedJavaScriptVisitor ) return ((FacetedJavaScriptVisitor<? extends T>)visitor).visitIfThen(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhileContext extends StatContext {
		public TerminalNode WHILE() { return getToken(FacetedJavaScriptParser.WHILE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public WhileContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).enterWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).exitWhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FacetedJavaScriptVisitor ) return ((FacetedJavaScriptVisitor<? extends T>)visitor).visitWhile(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BareExprContext extends StatContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEPARATOR() { return getToken(FacetedJavaScriptParser.SEPARATOR, 0); }
		public BareExprContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).enterBareExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).exitBareExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FacetedJavaScriptVisitor ) return ((FacetedJavaScriptVisitor<? extends T>)visitor).visitBareExpr(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DoWhileContext extends StatContext {
		public TerminalNode DO() { return getToken(FacetedJavaScriptParser.DO, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode WHILE() { return getToken(FacetedJavaScriptParser.WHILE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public DoWhileContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).enterDoWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).exitDoWhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FacetedJavaScriptVisitor ) return ((FacetedJavaScriptVisitor<? extends T>)visitor).visitDoWhile(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AlertContext extends StatContext {
		public TerminalNode ALERT() { return getToken(FacetedJavaScriptParser.ALERT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEPARATOR() { return getToken(FacetedJavaScriptParser.SEPARATOR, 0); }
		public AlertContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).enterAlert(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).exitAlert(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FacetedJavaScriptVisitor ) return ((FacetedJavaScriptVisitor<? extends T>)visitor).visitAlert(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WriteChlContext extends StatContext {
		public TerminalNode WRTCHL() { return getToken(FacetedJavaScriptParser.WRTCHL, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode SEPARATOR() { return getToken(FacetedJavaScriptParser.SEPARATOR, 0); }
		public WriteChlContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).enterWriteChl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).exitWriteChl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FacetedJavaScriptVisitor ) return ((FacetedJavaScriptVisitor<? extends T>)visitor).visitWriteChl(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PrintExprContext extends StatContext {
		public TerminalNode PRINT() { return getToken(FacetedJavaScriptParser.PRINT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEPARATOR() { return getToken(FacetedJavaScriptParser.SEPARATOR, 0); }
		public PrintExprContext(StatContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).enterPrintExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FacetedJavaScriptListener ) ((FacetedJavaScriptListener)listener).exitPrintExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FacetedJavaScriptVisitor ) return ((FacetedJavaScriptVisitor<? extends T>)visitor).visitPrintExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		int _la;
		try {
			setState(108);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new BareExprContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(25);
				expr(0);
				setState(26);
				match(SEPARATOR);
				}
				break;
			case 2:
				_localctx = new NamedFunctionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(28);
				match(FUNCTION);
				setState(29);
				match(ID);
				setState(30);
				params();
				setState(31);
				match(T__0);
				setState(35);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__5) | (1L << IF) | (1L << DO) | (1L << WHILE) | (1L << FOR) | (1L << WRTCHL) | (1L << SECURE) | (1L << ALERT) | (1L << WINOPEN) | (1L << FUNCTION) | (1L << VAR) | (1L << PRINT) | (1L << RETURN) | (1L << NEW) | (1L << DEFACET) | (1L << MD5) | (1L << INT) | (1L << BOOL) | (1L << STRING) | (1L << NULL) | (1L << UNDEFINED) | (1L << INC) | (1L << DEC) | (1L << ADD) | (1L << SUB) | (1L << SEPARATOR) | (1L << ID))) != 0)) {
					{
					{
					setState(32);
					stat();
					}
					}
					setState(37);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(38);
				match(T__1);
				}
				break;
			case 3:
				_localctx = new IfThenElseContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(40);
				match(IF);
				setState(41);
				match(T__2);
				setState(42);
				expr(0);
				setState(43);
				match(T__3);
				setState(44);
				block();
				setState(45);
				match(ELSE);
				setState(46);
				block();
				}
				break;
			case 4:
				_localctx = new IfThenContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(48);
				match(IF);
				setState(49);
				match(T__2);
				setState(50);
				expr(0);
				setState(51);
				match(T__3);
				setState(52);
				block();
				}
				break;
			case 5:
				_localctx = new WhileContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(54);
				match(WHILE);
				setState(55);
				match(T__2);
				setState(56);
				expr(0);
				setState(57);
				match(T__3);
				setState(58);
				block();
				}
				break;
			case 6:
				_localctx = new DoWhileContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(60);
				match(DO);
				setState(61);
				block();
				setState(62);
				match(WHILE);
				setState(63);
				match(T__2);
				setState(64);
				expr(0);
				setState(65);
				match(T__3);
				}
				break;
			case 7:
				_localctx = new ForContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(67);
				match(FOR);
				setState(68);
				match(T__2);
				setState(69);
				expr(0);
				setState(70);
				match(SEPARATOR);
				setState(71);
				expr(0);
				setState(72);
				match(SEPARATOR);
				setState(73);
				expr(0);
				setState(74);
				match(T__3);
				setState(75);
				block();
				}
				break;
			case 8:
				_localctx = new WriteChlContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(77);
				match(WRTCHL);
				setState(78);
				match(T__2);
				setState(79);
				expr(0);
				setState(80);
				match(T__4);
				setState(81);
				expr(0);
				setState(82);
				match(T__3);
				setState(83);
				match(SEPARATOR);
				}
				break;
			case 9:
				_localctx = new PrintExprContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(85);
				match(PRINT);
				setState(86);
				match(T__2);
				setState(87);
				expr(0);
				setState(88);
				match(T__3);
				setState(89);
				match(SEPARATOR);
				}
				break;
			case 10:
				_localctx = new AlertContext(_localctx);
				enterOuterAlt(_localctx, 10);
				{
				setState(91);
				match(ALERT);
				setState(92);
				match(T__2);
				setState(93);
				expr(0);
				setState(94);
				match(T__3);
				setState(95);
				match(SEPARATOR);
				}
				break;
			case 11:
				_localctx = new WinOpenContext(_localctx);
				enterOuterAlt(_localctx, 11);
				{
				setState(97);
				match(WINOPEN);
				setState(98);
				match(T__2);
				setState(99);
				expr(0);
				setState(100);
				match(T__3);
				setState(101);
				match(SEPARATOR);
				}
				break;
			case 12:
				_localctx = new ReturnExprContext(_localctx);
				enterOuterAlt(_localctx, 12);
				{
				setState(103);
				match(RETURN);
				setState(104);
				expr(0);
				setState(105);
				match(SEPARATOR);
				}
				break;
			case 13:
				_localctx = new BlankContext(_localctx);
				enterOuterAlt(_localctx, 13);
				{
				setState(107);
				match(SEPARATOR);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
